@@ -44,5 +44,6 @@ o Removed revisioning operations from authenticated user's home page (occurred
   
 6.x-2.3
 =======
-o Don't display horizontal rule when submenu is empty
-o Introduced CSS classes "revision-pending" and "revision-old"
+o Don't display horizontal rule when submenu is empty.
+o Styled current and pending revisions in revisions summary table.
+o Side-by-side comparison function when Diff module is enabled.
